K8S/platforms-depl.yaml
# Deployment of a container into a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  # select the template
  selector:
    matchLabels:
      app: platformservice
  # define the pod and the container we want to use
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: rawanad/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      # Cluster IP port
      port: 80
      targetPort: 80
    # gRPC (use HTTP not HTTPS)
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
